--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
         </li>
         <li class="nav-item d-none" id="manageUsersNav">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#usersModal">Пользователи</a>
-        </li>        
+        </li>
       </ul>
     </div>
   </nav>
@@ -62,6 +62,7 @@
               <th>Предмет</th>
               <th>Преподаватель</th>
               <th>Группа</th>
+              <th>Аудитория</th>
               <th></th>
             </tr>
           </thead>
@@ -113,7 +114,7 @@
     </div>
   </div>
 
-  <!-- Модальное окно Добавить пару -->
+  <!-- Модальное окно добавить пару -->
   <div class="modal fade" id="addModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -136,7 +137,7 @@
       </div>
     </div>
   </div>
-  
+
 <!-- Модальное окно: Пользователи -->
 <div class="modal fade" id="usersModal" tabindex="-1">
   <div class="modal-dialog modal-lg">
@@ -172,7 +173,7 @@
 <!-- Axios -->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<!-- скрипт -->
+<!-- Твой скрипт -->
 <script src="script.js"></script>
 
 </body>
